fix link width and align

--- a/src/components/signupForm/signup.module.css
+++ b/src/components/signupForm/signup.module.css
@@ -17,3 +17,7 @@
   background-color: #c2cadf;
   color: white;
 }
+.headToLogin {
+  width: 400px;
+  text-align: left;
+}
